Add card e alterado cor da letra

--- a/index.css
+++ b/index.css
@@ -6,6 +6,22 @@ body {
 	font-family: 'Open Sans', sans-serif;
 }
 
+.card {
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	padding: 20px 0;
+	width: 100%;
+	margin: auto;
+	background: #b027b00e;
+}
+
+@media only screen and (min-width: 768px) {
+	/* For desktop: */
+	.card {
+		width: 33.33%;
+	}
+}
+
 h3, p {
 	text-align: center;
+	color: #b027b0;
 }
